--- a/huellaProto/huellaProto/Views/CalcularInsti.xaml
+++ b/huellaProto/huellaProto/Views/CalcularInsti.xaml
@@ -45,22 +45,24 @@
                     VerticalOptions="CenterAndExpand">
                     <Label HorizontalOptions="CenterAndExpand" Text="Su huella de carbono es" />
 					<StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-						<Label FontSize="Large" Text="{Binding ToneladasCo2}" />
-						<Label FontSize="Large" Text="Toneladas de CO2" />
+						<Label FontSize="Medium" Text="{Binding ToneladasCo2}" />
+						<Label FontSize="Medium" Text="Toneladas de CO2" />
 					</StackLayout>
 				</StackLayout>
-
-                 <StackLayout Margin="0" Orientation="Horizontal">
+				<StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+					<Label FontSize="Medium" Text="¿Desea precisar el calculo?" />
+				</StackLayout>
+				<StackLayout Margin="20" Orientation="Horizontal">
                     <Button
                         BackgroundColor="#82a20d"
                         BorderRadius="23"
-                        Command="{Binding SiguienteCommand}"
+                        Command="{Binding PrecisarCommand}"
                         HeightRequest="46"
                         HorizontalOptions="CenterAndExpand"
                         IsEnabled="{Binding Isnabled, Mode=TwoWay}"
                         Text="Sí"
                         TextColor="White"
-                        WidthRequest="100" />
+                        WidthRequest="70" />
 					<Button
                         BackgroundColor="#82a20d"
                         BorderRadius="23"
@@ -70,7 +72,7 @@
                         IsEnabled="{Binding Isnabled, Mode=TwoWay}"
                         Text="No"
                         TextColor="White"
-                        WidthRequest="100" />
+                        WidthRequest="70" />
 				</StackLayout>
 
 
