--- a/huellaProto/huellaProto/Views/cuentaRegresiva.xaml
+++ b/huellaProto/huellaProto/Views/cuentaRegresiva.xaml
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="huellaProto.Views.cuentaRegresiva">
+             x:Class="huellaProto.Views.cuentaRegresiva" 
+             Title="Calculo"
+             BindingContext="{Binding Main, Source={StaticResource Locator}}">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+        <StackLayout BindingContext="{Binding CuentaRegresiva}">
+            <Label Text="{Binding Contador}"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
